--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.6.1",
+    "@tailwindcss/vite": "^4.0.14",
     "appwrite": "^17.0.1",
     "html-react-parser": "^5.2.2",
     "react": "^19.0.0",
@@ -18,6 +19,7 @@
     "react-hook-form": "^7.54.2",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.4.0",
+    "tailwindcss": "^4.0.14",
     "tinymce": "^7.7.2"
   },
   "devDependencies": {
